feat: implement conversation service logic and add unit tests for conversation controller